Complete rename of django-plugins to djp
Refs #3, #4

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,7 +4,7 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = django-plugins
+SPHINXPROJ    = djp
 SOURCEDIR     = .
 BUILDDIR      = _build
 
